Remove maxPermSize