@@ -304,7 +304,7 @@
           <forkCount>3</forkCount>
           <reuseForks>true</reuseForks>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <argLine>-Xmx1024m</argLine>
         </configuration>
       </plugin>
       <plugin>
